# ChessTools

./: .pre-commit-config.yaml  pyproject.toml
chess_tools/: exceptions.py
chess_tools/game/: board.py  enums.py  piece.py
tests/game/: test_board.py
